feat(nodebuilder): add /app/node_modules/.bin to PATH env
Allow using tools installed locally on node_modules/.bin

--- a/nodebuilder/dockerfile
+++ b/nodebuilder/dockerfile
@@ -1,6 +1,7 @@
 # Builder
 FROM node:12-alpine
 ENV NODE_ENV=development
+ENV PATH=$PATH:/app/node_modules/.bin
 WORKDIR /app
 COPY ./ /app
 RUN apk update && apk add --virtual native-deps \
