--- a/package.json
+++ b/package.json
@@ -3,20 +3,26 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {
-    "cz-conventional-changelog": "^3.0.2"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "commit": "git cz"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hwkd/dockerfiles.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
+  "bugs": {
+    "url": "https://github.com/hwkd/dockerfiles/issues"
+  },
+  "homepage": "https://github.com/hwkd/dockerfiles#readme",
+  "dependencies": {
+    "chalk": "^4.1.0",
+    "shelljs": "^0.8.4",
+    "yargs": "^16.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.12"
   }
 }
