chore: fix typo and add usage example

--- a/build
+++ b/build
@@ -22,7 +22,7 @@ yargs.version(false).command({
       demandOption: true,
     });
     yargs.option("u", {
-      desc: "Docker image ownder",
+      desc: "Docker image owner",
       alias: "user",
       demandOption: true,
     });
